grammar.txt
CODIGO  	    : CODIGO COMANDO .
                | COMANDO .

COMANDO		    : DECLARACAO
                | ACAO

DECLARACAO  	: TIPO L_ATRIBUICOES
                | FUNCAO_INICIO FUNCAO_FIM
                | FUNCAO_INICIO com L_PARAMS FUNCAO_FIM

FUNCAO_INICIO   | define idf
FUNCAO_FIM      | como CODIGO e deu
L_PARAMS  	    : L_PARAMS, PARAM | PARAM
PARAM   	    : TIPO idf

TIPO        	: int
                | real
                | texto
                | lista

L_ATRIBUICOES	: L_ATRIBUICOES , ATRIBUICAO
                | ATRIBUICAO

ATRIBUICAO     	: id
                | id é E
                | id é E a E

ACAO		    : E
                | idf é E
                | idf . CHAMADA L_ARGS
                | retorna E
                | CONDICAO
                | enquanto E faça CODIGO e deu
                | para idf em idf faça CODIGO e deu


CONDICAO        : se E então CODIGO FIM_CONDICAO
FIM_CONDICAO    : senão CONDICAO
                | tá bom então CODIGO e deu
                | e deu


E		        : (E)
		        | E mais E
		        | E menos E
		        | E vezes E
		        | E dividido por E
		        | E na E
		        | incrementa E
		        | decrementa E
		        | E comp E
		        | E e E
		        | E ou E
		        | não E
		        | valor_int
		        | valor_float
		        | valor_string
		        | verdadeiro
		        | falso
		        | idf
		        | idf [ E ]

E	                : FUNC L_ARGS
                    | idf com L_ARGS

FUNC			    : mostra
                    | leia
                    | bota

L_ARGS		    	: L_ARGS, E
                	| E

comp 	            : é comp2
comp2	            : comp3 comp4 | comp5 | diferente
comp3	            : maior | menor
comp4	            : que | ou comp5
comp5	            : igual a


1 mais soma com (1, 1 mais 1)
1 mais soma com (1, 1) mais 1
